<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>emanondev.deepquests</groupId>
    <artifactId>DeepQuests5</artifactId>
    <version>5.0.0</version>
    <packaging>jar</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <finalName>${project.name}-${project.version}</finalName>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <repositories>
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/public/</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <!-- CodeMC repository -->
        <repository>
            <id>CodeMC</id>
            <url>https://repo.codemc.io/repository/maven-public/</url>
        </repository>
        <!-- PlaceholderAPI repo -->
        <repository>
            <id>placeholderapi</id>
            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
        </repository>
        <!-- Parties repo -->
        <repository>
            <id>alessiodp-repo</id>
            <url>https://repo.alessiodp.com/releases/</url>
        </repository>
        <!-- SkillAPI repo -->
        <repository>
            <id>github</id>
            <url>https://maven.pkg.github.com/promcteam/promccore</url>
        </repository>
        <!-- Citizen -->
        <repository>
            <id>everything</id>
            <url>http://repo.citizensnpcs.co/</url>
        </repository>
        <!-- MythicMobs -->
        <repository>
            <id>lumine-repo</id>
            <url>https://mvn.lumine.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>lumine-snapshot</id>
            <url>http://mvn.lumine.io/repository/maven-snapshots/</url>
        </repository>
        <repository>
            <id>sk89q-repo</id>
            <url>https://maven.enginehub.org/repo/</url>
        </repository>
        <!-- Towny -->
        <repository>
            <id>glaremasters repo</id>
            <url>https://repo.glaremasters.me/repository/towny/</url>
        </repository>
    </repositories>
    <dependencies>
        <!-- Spigot -->
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.20.1-R0.1-SNAPSHOT</version>
            <type>jar</type>
        </dependency>
        <!-- JetBrains Annotations -->
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>24.0.1</version>
        </dependency>
        <!-- Vault -->
        <dependency>
            <groupId>com.github.MilkBowl</groupId>
            <artifactId>VaultAPI</artifactId>
            <version>1.7</version>
        </dependency>
        <!-- PlaceHolderAPI -->
        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>2.10.9</version>
        </dependency>
        <!-- Towny -->
        <dependency>
            <groupId>com.palmergames.bukkit.towny</groupId>
            <artifactId>towny</artifactId>
            <version>0.98.1.0</version>
            <scope>provided</scope>
        </dependency>
        <!-- ItemEdit -->
        <dependency>
            <groupId>emanondev.itemedit</groupId>
            <artifactId>ItemEdit</artifactId>
            <version>3.0.3</version>
            <scope>provided</scope>
        </dependency>
        <!-- Jobs -->
        <dependency>
            <groupId>com.github.Zrips</groupId>
            <artifactId>Jobs</artifactId>
            <version>v4.17.2</version>
        </dependency>
        <!-- DeepCore -->
        <dependency>
            <groupId>emanondev.core</groupId>
            <artifactId>DeepCore</artifactId>
            <version>3.8.2</version>
            <scope>provided</scope>
        </dependency>
        <!-- Parties -->
        <dependency>
            <groupId>com.alessiodp.parties</groupId>
            <artifactId>parties-api</artifactId>
            <version>3.1.14</version>
            <scope>provided</scope>
        </dependency>
        <!-- Citizen -->
        <dependency>
            <groupId>net.citizensnpcs</groupId>
            <artifactId>citizensapi</artifactId>
            <version>2.0.18-SNAPSHOT</version>
            <type>jar</type>
            <scope>compile</scope>
        </dependency>
        <!-- DrcGui -->
        <dependency>
            <groupId>pro.dracarys</groupId>
            <artifactId>DracarysGUI</artifactId>
            <version>5.1</version>
            <scope>system</scope>
            <systemPath>C:/MavenDependency/DracarysGUI-5.1.jar</systemPath>
        </dependency>
        <!-- MythicMobs -->
        <dependency>
            <groupId>io.lumine</groupId>
            <artifactId>MythicMobs</artifactId>
            <version>5.0.2</version>
            <scope>system</scope>
            <systemPath>C:/MavenDependency/MythicMobs-5.0.2-4068.jar</systemPath>
        </dependency>
        <!-- MCmmo -->
        <dependency>
            <groupId>com.gmail.nossr50.mcMMO</groupId>
            <artifactId>mcMMO</artifactId>
            <version>2.1.209</version>
            <scope>system</scope>
            <systemPath>C:/MavenDependency/mcMMO-2.1.209.jar</systemPath>
        </dependency>
        <!-- CMI -->
        <dependency>
            <groupId>com.Zrips.CMI</groupId>
            <artifactId>CMI</artifactId>
            <version>9.1.3.0</version>
            <scope>system</scope>
            <systemPath>C:/MavenDependency/CMI-9.1.3.0.jar</systemPath>
        </dependency>
        <!-- SkillAPI -->
        <dependency>
            <groupId>com.sucy.skill</groupId>
            <artifactId>ProSkillApi</artifactId>
            <version>1.1.7.15</version>
            <scope>system</scope>
            <systemPath>C:/MavenDependency/proskillapi-1.1.7.15-0930442.jar</systemPath>
        </dependency>
        <!-- WG events -->
        <dependency>
            <groupId>com.mewin.worldguardregionapi</groupId>
            <artifactId>WorldGuardRegionAPI</artifactId>
            <version>4.5</version>
            <scope>system</scope>
            <systemPath>C:/MavenDependency/WorldGuardRegionAPI-4.5.jar</systemPath>
        </dependency>
        <!-- This depends on the Bukkit API, Use this if you need BukkitAdapter -->
        <dependency>
            <groupId>com.sk89q.worldedit</groupId>
            <artifactId>worldedit-bukkit</artifactId>
            <version>7.2.0-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.sk89q.worldguard</groupId>
            <artifactId>worldguard-bukkit</artifactId>
            <version>7.1.0-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>
</project>